<resources>
    <string name="app_name">TODO</string>
    <string name="google_log_in">Google Log in</string>
    <string name="token">501805996853-cavmflaki2h4uhvk1tcckqntbpa1au7r.apps.googleusercontent.com</string>
    <string name="enter_your_todo">Enter your TODO</string>
    <string name="submit">Submit</string>
    <string name="options_symbol">⋮</string>
    <string name="name">Name</string>
    <string name="log_out">LOG OUT</string>
    <string name="add_todos">Add todos</string>
    <string name="back">Back</string>
    <string name="item">Item</string>
</resources>